--- a/src/App.scss
+++ b/src/App.scss
@@ -22,3 +22,28 @@
 		}
 	}
 }
+
+.project-details {
+	width: 60%;
+	height: 100vh;
+	margin: 0 auto;
+	text-align: left;
+	padding: 2% 4%;
+	border-color: lightgray;
+	border-style: solid;
+	border-width: 0 1px 0 1px;
+
+	a {
+		color: black;
+		font-weight: bold;
+	}
+
+	h2 {
+		padding-bottom: 1%;
+		border-bottom: 1px solid lightgray;
+	}
+
+	.action {
+		border-top: 1px solid lightgray;
+	}
+}
